[package]
name = "blogsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.15.0"
actix-web = "4"
actix-session = { version = "0.7.0", features = ["cookie-session"] }
actix-web-httpauth = "0.8.0"
actix-rt = "2.7.0"
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
futures = "0.3.21"
sha256 = "1.0.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
rand = "0.8.5"
redis = "0.21.5"
r2d2_redis = "0.14.0"